@@ -1,5 +1,9 @@
 2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	* src/binarization/kim.cc: Remove debug and useless steps.
+
+2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	* src/binarization/kim.cc: New binarization algorithm.
 
 2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
